Fixes error in running rake db:seed. Fixes adds .promotion class to fix promotion spacing on promotion index.html.erb

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -460,6 +460,11 @@ ul.navigation li a:hover {
 /***************************************************************************
 		Promotion
 	***************************************************************************/
+
+.promotion {
+  min-height: 250px;
+}
+
  div.promotion {
     width: 786px;
     background-image: url('content_bg_full.png');
